Make RD server decorative

--- a/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/Machine/production.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/Machine/production.yml
@@ -184,9 +184,9 @@
     guides:
     - Robotics
 
-# yes i know this prototype name is long i'm just following conventions
 - type: entity
   id: ResearchAndDevelopmentServerMachineCircuitboard
+  abstract: true # Frontier
   parent: BaseMachineCircuitboard
   name: R&D server machine board
   description: A machine printed circuit board for the R&D server.
