--- a/Resources/Prototypes/Objectives/stealTargetGroups.yml
+++ b/Resources/Prototypes/Objectives/stealTargetGroups.yml
@@ -200,12 +200,13 @@
     sprite: Clothing/Ears/Headsets/medical.rsi
     state: icon_alt
 
-- type: stealTargetGroup
-  id: ResearchAndDevelopmentServerMachineCircuitboard
-  name: steal-target-groups-research-and-development-server-machine-circuitboard
-  sprite:
-    sprite: Objects/Misc/module.rsi
-    state: science
+# Frontier
+#- type: stealTargetGroup
+#  id: ResearchAndDevelopmentServerMachineCircuitboard
+#  name: steal-target-groups-research-and-development-server-machine-circuitboard
+#  sprite:
+#    sprite: Objects/Misc/module.rsi
+#    state: science
 
 - type: stealTargetGroup
   id: FireAxe
