--- a/Resources/Prototypes/Procedural/salvage_rewards.yml
+++ b/Resources/Prototypes/Procedural/salvage_rewards.yml
@@ -56,7 +56,7 @@
   weights:
     # rare machinery
     AmmoTechFabCircuitboard: 1.0
-    ResearchAndDevelopmentServerMachineCircuitboard: 1.0
+    # ResearchAndDevelopmentServerMachineCircuitboard: 1.0   # Frontier
     CratePartsT4: 1.0
     PowerCellAntiqueProto: 0.25
     # basic weapons
