--- a/Resources/Prototypes/_NF/Procedural/scrap_vgroid.yml
+++ b/Resources/Prototypes/_NF/Procedural/scrap_vgroid.yml
@@ -296,7 +296,7 @@
         - SpawnDungeonComputerFrame
         - SolarPanelBroken
         - SpawnDungeonCanisterBroken
-        - SpawnDungeonLootCanister
+        - SalvageCanisterSpawner
     # Rock formations
     - !type:BiomeEntityLayer
       threshold: -0.2
