--- a/Resources/Prototypes/XenoArch/Effects/normal_effects.yml
+++ b/Resources/Prototypes/XenoArch/Effects/normal_effects.yml
@@ -493,7 +493,7 @@
   - type: ChemicalPuddleArtifact
     maximumVolume: 600 # Frontier
     chemicalSolution:
-      maxVol: 300 # Frontier
+      maxVol: 300 # Frontier: 500<300
       canReact: false
     possibleChemicals:
     - Dermaline
