another fix maybe

--- a/Resources/Prototypes/_NF/Entities/Materials/ore.yml
+++ b/Resources/Prototypes/_NF/Entities/Materials/ore.yml
@@ -19,7 +19,7 @@
 # Ore vein
 - type: ore
   id: NFOreScrap
-  oreEntity: ScrapOre1
+  oreEntity: ScrapOre3
   minOreYield: 1
   maxOreYield: 5
 
@@ -49,14 +49,14 @@
 
 - type: material
   id: RawScrap
-  stackEntity: ScrapOre3
+  stackEntity: ScrapOre1
   name: materials-raw-scrap
   unit: materials-unit-chunk
   icon: { sprite: /Textures/_NF/Objects/Materials/ore.rsi, state: scrapore }
   color: "#FFD700"
   price: 0.02
 
-# Spawner for lather: yield random mats if processed in ore processor
+# Spawner for lathe: yield random mats if processed in ore processor
 - type: entity
   name: refined scrap
   id: SpawnRandomRefinedScrap
