--- a/Resources/Prototypes/_NF/Shipyard/akupara.yml
+++ b/Resources/Prototypes/_NF/Shipyard/akupara.yml
@@ -12,7 +12,7 @@
   id: Akupara
   name: UW Akupara
   description: A medium full-feature botanical research biodome equipped to help a botanist fully interact with their plants in almost any way conceivable.
-  price: 51000 #~48416
+  price: 52000
   category: Medium
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/akupara.yml
