Buffed PTK-800, increaced power draw to discourage using many of em, dropped from flatpackvend

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
@@ -408,7 +408,7 @@
 
 - type: entity
   id: BulletKineticShuttle
-  parent: BaseBullet
+  parent: BaseBulletTrigger
   categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
@@ -434,6 +434,11 @@
     color: white
     energy: 0.5
   - type: GatheringProjectile
+  - type: ProjectileSpread # Frontier
+    proto: BulletKineticShuttle # Frontier
+    count: 6 # Frontier
+    spread: 15 # Frontier
+
 
 - type: entity
   id: BulletCharge
@@ -987,7 +992,7 @@
       - HideContextMenu
 
 - type: entity
-  name: laser bolt 
+  name: laser bolt
   id: BulletLaser
   parent: BaseBullet
   categories: [ HideSpawnMenu ]
@@ -1033,7 +1038,7 @@
   - type: ProjectileSpread
     proto: BulletLaser
     count: 5 #65 heat damage if you hit all your shots, but wide spread
-    spread: 30 
+    spread: 30
 
 - type: entity
   name: narrow laser barrage
@@ -1055,7 +1060,7 @@
   - type: ProjectileSpread
     proto: BulletDisablerSmg
     count: 3 #bit stronger than a disabler if you hit your shots you goober, still not a 2 hit stun though
-    spread: 9 
+    spread: 9
 
 # Frontier projectiles
 # The game wont allow them to sit under _NF.
