--- a/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/flatpackvend.yml
+++ b/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/flatpackvend.yml
@@ -1,7 +1,7 @@
 - type: vendingMachineInventory
   id: FlatpackVendInventory
   startingInventory:
-    ShuttleGunKineticFlatpack: 4294967295 # Infinite
+#    ShuttleGunKineticFlatpack: 4294967295 # Infinite # Find one or do science
     OreProcessorFlatpack: 4294967295 # Infinite
     AutolatheFlatpack: 4294967295 # Infinite
 #    HydroponicsTrayEmptyFlatpack: 16 # Get a food ship, or an atmost ship
