--- a/Resources/Prototypes/Entities/Objects/Specific/chemistry.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/chemistry.yml
@@ -413,6 +413,10 @@
     minimumSpeed: 3
     removalTime: 0.25
     embedOnThrow: false
+  - type: SolutionContainerManager # DeltaV - Nerfs the max volume to 5 (was 15)
+    solutions:
+      injector:
+        maxVol: 5 
   - type: SolutionInjectWhileEmbedded
     transferAmount: 1
     solution: injector
