Deep fryer recipes, Nyano drinks, donut glazing

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
@@ -450,10 +450,14 @@
   name: raw pastry base
   parent: FoodBakingBase
   id: FoodDoughPastryBaseRaw
-  description: Must be cooked before use.
+  # description: Must be cooked before use. # Frontier: return when we have things using cooked pastry base
+  description:
   components:
   - type: Sprite
     state: dough-pastry
+  - type: SliceableFood # Frontier
+    count: 3 # Frontier
+    slice: FoodDonutUncooked # Frontier
 
 - type: entity
   name: pastry base
@@ -564,6 +568,10 @@
     slice: FoodButterSlice
   - type: Extractable # Frontier
     grindableSolutionName: food # Frontier
+  - type: Tag # Frontier
+    tags: # Frontier
+      - Ingredient # Frontier
+      - NFButterStick # Frontier
 
 - type: entity
   name: butter slice
