--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
@@ -932,6 +932,7 @@
     entries:
       Burger: MeatChicken
       Taco: MeatChicken
+  - type: DeepFryBlacklist # Frontier
 
 - type: entity
   name: cooked duck
