--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/misc.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/misc.yml
@@ -200,6 +200,7 @@
           Quantity: 2
         - ReagentId: Vitamin
           Quantity: 1
+  - type: DeepFryBlacklist # Frontier
 
 # Waffles/Pancakes
 
