--- a/Resources/Prototypes/Recipes/Construction/Graphs/food/pizza.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/food/pizza.yml
@@ -11,4 +11,17 @@
         doAfter: 1
   - node: flat
     entity: FoodDoughFlat
+    # Frontier: adding butter and rolling to pastries
+    - to: pastry
+    steps:
+    - tag: NFButterStick
+      name: a stick of butter
+      icon:
+        sprite: Objects/Consumable/Food/ingredients.rsi
+        state: butter
+    - tool: Rolling
+      doAfter: 2 # Lamination takes time
+  - node: pastry
+    entity: FoodDoughPastryBaseRaw
+  # End Frontier
   # TODO: add stuff for adding ingredients then cooking the pizza, wsci
