--- a/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
@@ -310,7 +310,7 @@
 - type: microwaveMealRecipe
   id: RecipeDonutMatcha
   name: matcha donut recipe
-  result: FoodDonutBungo
+  result: FoodDonut
   time: 5
   reagents:
     TeaPowder: 2
@@ -341,19 +341,19 @@
     PinkDrink: 2
     Sugar: 2
   solids:
-    FoodDonutPlainJelly: 1
+    FoodDonutJellyPlain: 1
   recipeType:
   - Assembler
 
 - type: microwaveMealRecipe
-  id: RecipeDonutJellyHomer
+  id: RecipeDonutJellyPink
   name: pink jelly-donut recipe
   result: FoodDonutJellyPink
   time: 5
   reagents:
     PinkDrink: 2
   solids:
-    FoodDonutPlainJelly: 1
+    FoodDonutJellyPlain: 1
   recipeType:
   - Assembler
 
@@ -365,7 +365,7 @@
   reagents:
     PolypyryliumOligomers: 2
   solids:
-    FoodDonutPlainJelly: 1
+    FoodDonutJellyPlain: 1
   recipeType:
   - Assembler
 
@@ -377,7 +377,7 @@
   reagents:
     JuiceApple: 2
   solids:
-    FoodDonutPlainJelly: 1
+    FoodDonutJellyPlain: 1
   recipeType:
   - Assembler
 
@@ -390,7 +390,7 @@
     Cream: 2
     Sugar: 2
   solids:
-    FoodDonutPlainJelly: 1
+    FoodDonutJellyPlain: 1
   recipeType:
   - Assembler
 
@@ -403,7 +403,7 @@
     CocoaPowder: 2
     Sugar: 2
   solids:
-    FoodDonutPlainJelly: 1
+    FoodDonutJellyPlain: 1
   recipeType:
   - Assembler
 
@@ -415,7 +415,7 @@
   reagents:
     JuiceBluePumpkin: 2
   solids:
-    FoodDonutPlainJelly: 1
+    FoodDonutJellyPlain: 1
   recipeType:
   - Assembler
 
@@ -427,20 +427,20 @@
   reagents:
     JuiceBungo: 2
   solids:
-    FoodDonutPlainJelly: 1
+    FoodDonutJellyPlain: 1
   recipeType:
   - Assembler
 
 - type: microwaveMealRecipe
   id: RecipeDonutJellyMatcha
   name: matcha jelly-donut
-  result: FoodDonutJellyMatcha
+  result: FoodDonutJelly
   time: 5
   reagents:
     TeaPowder: 2
     Sugar: 2
   solids:
-    FoodDonutPlainJelly: 1
+    FoodDonutJellyPlain: 1
   recipeType:
   - Assembler
 
@@ -452,7 +452,7 @@
   reagents:
     LaughinSyrup: 2
   solids:
-    FoodDonutPlainJelly: 1
+    FoodDonutJellyPlain: 1
   recipeType:
   - Assembler
 
@@ -466,7 +466,7 @@
 #     Happiness: 1
 #     Pax: 1
 #   solids:
-#     FoodDonutPlainJelly: 1
+#     FoodDonutJellyPlain: 1
 #   recipeType:
 #   - Assembler
 
