--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/pda.yml
@@ -9,7 +9,7 @@
     handheld: true
 
 - type: entity
-  parent: [MusicBasePDA, CentcomPDA]
+  parent: [MusicBasePDA, AdminPDA]
   id: NFAdminPDA
   components:
   - type: CartridgeLoader
