--- a/Resources/Prototypes/_NF/Entities/Stations/nanotrasen.yml
+++ b/Resources/Prototypes/_NF/Entities/Stations/nanotrasen.yml
@@ -66,6 +66,7 @@
   - BaseStationCargo # Cargo
   - BaseStationJobsSpawning # Records and jobsspawning
   - BaseStationRecords
+  - BaseSectorStationRecords # Makes Outpost gain extra copy of record from character latejoining no matter the location(station)
   - BaseStationAlertLevels # Has a comms console
   - BaseStationSiliconLawFrontierStation # No funny borg laws
   - BaseStationDampening
