Fix chaos donut recipe

--- a/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
@@ -169,7 +169,7 @@
   recipeType:
   - Assembler
 
-# Donuts (raw, iced) - frying handled by DeepFrySpawnComponent per-entity
+# Donuts (uncooked as well as glazed) - frying handled by DeepFrySpawnComponent per-entity
 
 - type: microwaveMealRecipe
   id: RecipeDonutUncookedJelly
@@ -190,7 +190,7 @@
   result: FoodDonutHomer
   time: 5
   reagents:
-    PinkDrink: 2
+    JuiceBerry: 2
     Sugar: 2
   solids:
     FoodDonutPlain: 1
@@ -203,7 +203,7 @@
   result: FoodDonutChaos
   time: 5
   solids:
-    MaterialBluespace1: 1
+    MaterialBluespace: 1
     FoodDonutPlain: 1
   recipeType:
   - Assembler
@@ -225,7 +225,7 @@
   result: FoodDonutPink
   time: 5
   reagents:
-    PinkDrink: 2
+    JuiceBerry: 2
   solids:
     FoodDonutPlain: 1
   recipeType:
