Nyanotrasen recipes: match delta-V defns

--- a/Resources/Prototypes/Nyanotrasen/Recipes/Reactions/drink.yml
+++ b/Resources/Prototypes/Nyanotrasen/Recipes/Reactions/drink.yml
@@ -27,8 +27,6 @@
   reactants:
     Tequila:
       amount: 1
-    Ice:
-      amount: 1
     Beer:
       amount: 1
     Sulfur:
@@ -131,3 +129,15 @@
       amount: 2
   products:
     BubbleTea: 5
+
+- type: reaction
+  id: GrapeSoda
+  reactants:
+    JuiceGrape:
+      amount: 1
+    SodaWater:
+      amount: 1
+    Sugar:
+      amount: 1
+  products:
+    GrapeSoda: 3
