--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shipyard_mothership.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shipyard_mothership.yml
@@ -108,6 +108,7 @@
     - Eagle
     - Apothecary
     - Tyne
+    - Stasis
 
 # The GASBENDA-A-A-AH (sick metal guitar riff) console
 - type: entity
