--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -185,11 +185,11 @@
       - Bucket
       - MopItem
       - SprayBottle
-      - MiniHoe
+      - NFMiniHoe
       - HydroponicsToolScythe
       - HydroponicsToolHatchet
-      - Spade
-      - Clippers
+      - NFSpade
+      - NFClippers
       - ServiceSelectiveDropper
       - PlantBag
       - Beaker
