--- a/Resources/Prototypes/Recipes/Lathes/tools.yml
+++ b/Resources/Prototypes/Recipes/Lathes/tools.yml
@@ -165,19 +165,19 @@
     Cloth: 100
     Steel: 50
 
+# Frontier
 - type: latheRecipe
-<<<<<<< HEAD
+  parent: BaseToolRecipe
   id: UtilityBeltChiefEngineer
   result: ClothingBeltChiefEngineer
   completetime: 6
   materials:
     Silver: 400
     Gold: 100
+# End Frontier
 
 - type: latheRecipe
-=======
   parent: BaseToolRecipe
->>>>>>> 895648aa2c753181c261a6bed8461730f4248ec8
   id: HolofanProjector
   result: HolofanProjectorEmpty
   completetime: 8
@@ -189,12 +189,7 @@
 - type: latheRecipe
   parent: BaseToolRecipe
   id: WelderExperimental
-<<<<<<< HEAD
   result: WelderExperimentalEmpty # Frontier - WelderExperimental<WelderExperimentalEmpty
-  category: Tools
-=======
-  result: WelderExperimental
->>>>>>> 895648aa2c753181c261a6bed8461730f4248ec8
   completetime: 6
   materials:
     Steel: 800
