--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -378,9 +378,10 @@
       - FauxTileAstroIce
       - FauxTileAstroSnow
       - OreBagOfHolding
-      - PlantBagOfHolding #DeltaV
       - DeviceQuantumSpinInverter
-      - UtilityBeltChiefEngineer
+      - PlantBagOfHolding # DeltaV
+      - FireExtinguisherBluespace # DeltaV
+      - UtilityBeltChiefEngineer # Frontier
       - JetpackVoid # Frontier
       - ClothingShoesBootsMagAdv # Frontier
       - ClothingOuterHardsuitAtmos # Frontier
