--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -54,6 +54,7 @@
       - HandLabeler
       - Signaller
       - ClothingMaskWeldingGas
+      - FireExtinguisher
     ## Basic storage
       - ToolboxArtisticNF
       - ToolboxElectricalNF
@@ -70,6 +71,9 @@
       - ConveyorBeltAssembly
       - PowerCellSmall
       - PowerCellMedium
+      - CableStack
+      - CableMVStack
+      - CableHVStack
     ## Basic electronics
       - SignalTimerElectronics
       - CellRechargerCircuitboard
@@ -80,14 +84,11 @@
     ## Tools
       - NodeScanner
     dynamicRecipes:
-    # Shared lathe recipes
-    ## Advanced tools
       - WelderExperimental
       - JawsOfLife
       - PowerDrill
       - JetpackVoid
       - PowerCellHigh
-      #- PowerCellHyperNF
       - PowerCellMicroreactor
       - BluespaceBeaker
       - VialBluespace
@@ -100,10 +101,7 @@
       - Bucket
       - MopItem
       - SprayBottle
-      - FireExtinguisher
-      - CableStack
-      - CableMVStack
-      - CableHVStack
+      - FireExtinguisherBluespace # DeltaV
       - ClothingOuterHardsuitBasic
       - ClothingOuterHardsuitRd
 
@@ -266,6 +264,7 @@
       - SyringeBluespace
       - PlantBagOfHolding
       - PlantAnalyzer
+      - FireExtinguisherBluespace # DeltaV
   - type: EmagLatheRecipes
     emagStaticRecipes:
       - NFHappyHonkNukieEmpty
@@ -343,6 +342,7 @@
       - WelderIndustrial
       - WelderIndustrialAdvanced
       - HolofanProjector
+      - FireExtinguisher
     ## Parts
       - MicroManipulatorStockPart
       - MatterBinStockPart
@@ -417,7 +417,6 @@
       - MiningDrill
       - MiningDrillDiamond
       - SprayBottle
-      - FireExtinguisher
       - ShipyardRCD
       - ShipyardRCDAmmo
       - SignallerAdvanced
@@ -426,6 +425,7 @@
       - ClothingOuterHardsuitEngineering
       - ClothingOuterHardsuitEngineeringWhite
       - ConstructionBagOfHolding
+      - FireExtinguisherBluespace # DeltaV
 
 - type: entity
   parent: [ BlueprintReceiverBase, BaseLatheLube ]
