--- a/Resources/_NF/migration.yml
+++ b/Resources/_NF/migration.yml
@@ -102,3 +102,7 @@ XenoAISpawnerQueen: SpawnMobXenoQueenDungeon
 
 # 2024-11-16 Canister
 SpawnDungeonLootCanister: SalvageCanisterSpawner
+
+# 2024-11-22 Magboots
+ClothingShoesBootsMagCombat: ClothingShoesBootsMagSecurity
+ClothingShoesBootsMagCombatFilled: ClothingShoesBootsMagSecurityFilled
